syntax = "proto3";
package proto;

message SuperBlockInfo {
  repeated uint64 BucketsSet = 1; // User现有的Buckets
  int32 MetaBackupCount = 2; //对于所有的元数据块，副本数
  int32 NextBucketID = 3;
  int32 MagicNumber = 4;
  int32 Version = 5; //版本号
}

message BucketInfo {
  string Name = 1;
  int32 BucketID = 2;
  int32 Policy = 3;    //存储策略-纠删(1)or多备份(2)
  int32 DataCount = 4; 
  int32 ParityCount = 5; 
  int64 CurStripe = 6;       //当前写到哪一个Stripe
  int64 NextOffset = 7;      //当前写到哪一个Offset
  int64 ObjectsBlockSize = 8; //本Bucket的ObjectsBlock序列化后占多少字节
  int32 SegmentSize = 9;    //本Bucket的segment size
  int32 TagFlag = 10;       //本Bucket的TagFLag
  int64 Ctime = 11;          //本Bucket的创建时间
  int64 LastModified = 12;   //本Bucket内数据上次修改时间
  bool Deletion = 13;        //Bucket是否已删除
  bool Encryption = 14;      //Bucket是否采取加密
}

message ObjectInfo {
  string Name = 1;                  //对象名称
  int32 BucketID = 2;               //本对象所属的Bucket
  int64 Length = 3;                 //对象长度
  int64 StripeStart = 4;            //本对象的起始Stripe
  int64 Offset = 5;                 //本对象在起始Stripe的起始offset
  int64 Ctime = 6;                 //对象创建时间
  string ContentType = 7;           //对象的类型，如文本、图片
  string ETag = 8;                  //MD5
  bool Deletion = 9;               //对象是否已删除
  bool Dir = 10;                    //是否为目录
  map<string, string> Metadata = 11; // User可以对文件自定义一些元信息
  string NextPart = 12;             //此项保存此对象追加的下一个part的Key，下一个Part同样以Object形式存在
}
